# bidir_iter

./: .travis.yml  Cargo.toml  README.md
src/: bidir_iterator.rs  iterate.rs  lib.rs
