[package]
name = "bidir_iter"
version = "0.2.0"
authors = ["sean billig <sean.billig@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Bidirectional iterators"
repository = "https://github.com/sbillig/bidir_iter"
documentation = "https://docs.rs/bidir_iter/"
readme = "README.md"
keywords = ["bidirectional", "iterator", "backward", "reverse"]
exclude = [".travis.yml"]

[dependencies]
